Use JobManager's backend as persistent storage and source of truth (#903)
* in memory job repository

fixes after rebase

fix python tests

* handle empty response from dataflow

* test job with no labels

* some comments

* some apidocs

* fix comment

* fix tests

* refactor merging jobSelector & labels

* default project name

* default project name